<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.example.cleanarchdemo.ui.registration.model.RegistrationModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/standard_margin">

        <ScrollView
            android:scrollbars="none"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSubmit"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/tvFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin_half"
                    android:text="@string/text_registration_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_text"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUserName"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/hint_enter_your_name"
                    app:helperText="@string/helper_char_digit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvFormTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:text="@={model.userName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDob"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/hint_enter_your_dob"
                    app:helperText="@string/helper_age_restriction"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@={model.dob}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin_half"
                    android:hint="@string/hint_enter_your_phone"
                    app:helperText="@string/helper_phone_number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tilDob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:text="@={model.phone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPostalCode"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_postal_code"
                    app:helperText="@string/helper_postal_code"
                    app:layout_constraintLeft_toLeftOf="@id/guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tilPhone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:text="@={model.postalCode}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPostalOffice"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/hint_enter_post_office"
                    app:helperText="@string/helper_char_digit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilPhone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:text="@={model.postOffice}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilThana"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/hint_enter_thana"
                    app:helperText="@string/helper_char_digit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilPostalOffice">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:text="@={model.thana}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDistrict"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/hint_enter_district"
                    app:helperText="@string/helper_char_digit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilThana"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:text="@={model.district}" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <View
                    android:id="@+id/vDob"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="@dimen/size_0dp"
                    app:layout_constraintBottom_toBottomOf="@id/tilDob"
                    app:layout_constraintLeft_toLeftOf="@id/tilDob"
                    app:layout_constraintRight_toRightOf="@id/tilDob"
                    app:layout_constraintTop_toTopOf="@id/tilDob" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvSubmit"
            style="@style/ButtonText"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/bg_btn_submit"
            android:enabled="@{model.shouldEnable}"
            android:text="@string/text_submit"
            android:textAllCaps="true"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>